css lesson 2 updates

--- a/CSSlesson2.html
+++ b/CSSlesson2.html
@@ -16,9 +16,33 @@
 
 
 <div id="wrapper">
-    <div class="article"
+    <div class="article">
+
     <h1>Rename monkeypox strains to remove geographic stigma, researchers say</h1>
-    <p>BY JON COHEN 10 JUN 2022, 4:25PM </p>
+
+    <p>BY JON COHEN 10 JUN 2022, 4:25PM </p> 
+
+    <img src="images/virus.jpg" />
+
+    <p>The name “hMPXV A.1” may not roll off the tongue, but a prominent, international group of researchers contends that something like it should emerge from an overhaul of the current naming system for monkeypox and its so-called West African and Congo Basin strains.</p>
+
+<p>“In the context of the current global outbreak, continued reference to, and nomenclature of this virus being African is not only inaccurate but is also discriminatory and stigmatizing,” write 29 co-authors from 11 countries in a preprint posted on virological.org today. They further note that the strain now circulating in people outside Africa is probably distinct from the virus in animals—and they “urge a speedy decision and adoption of a new name.”</p>
+
+<p>The call echoes previous debates over the names of other diseases and pathogens, including a recent one that led to the current nomenclature for SARS-CoV-2 variants, with Greek letters replacing geographical names like the Wuhan or South African strain. Similarly, the preprint authors want a “practical and neutral system of nomenclature” used for monkeypox.</p>
+
+<p>“Very, very delighted to see this,” tweeted Neil Stone, an infectious disease specialist at University College London Hospitals, in response to the preprint.</p>
+
+<p>The current monkeypox outbreak—the first to ever occur on multiple continents outside of Africa—has spread to more than 1500 people in 47 countries. Years ago, researchers divided monkeypox viruses into West African and Congo Basin “clades,” or branches, which have unique genomic signatures and cause disease of different severity. Viruses sequenced in the current outbreak broadly match those in the typically milder West African clade.</p>
+
+<p>But some researchers argue the human strains now being seen around the world actually form a third clade, and those viruses may also have different transmission characteristics. “It’s quite clear that this virus is related in a very different way” to previously sequenced strains, says Tulio de Oliveira, an evolutionary biologist at the University of KwaZulu-Natal who is last author of the preprint.</p>
+
+<p>Typically, monkeypox outbreaks occur in Africa when the virus spills over from animal species—most commonly rodents, not monkeys—that regularly infect each other and act as reservoirs for the pathogen. But no links to animals have been found in cases of the current outbreak, and the first patients surfaced in Europe, where increasing evidence suggests the virus may have been transmitting between humans undetected for many months. “There was a big adaptation to the human host. The real source of this outbreak is mostly Europe and then it is being introduced everywhere else in the world,” Oliveira says.</p>
+
+<p>Oliveira and colleagues on the preprint suggest human monkeypox (hMPXV) as a placeholder name with numbers representing clades: 1 for Congo Basin as it was the first to be detected, 2 for West African, and 3 for the current strain, which might inappropriately be named the “Euro” clade. Lineages within a clade could use the alphabet, as SARS-CoV-2 does with Omicron BA.5, for example. The group has already discussed its ideas with the World Health Organization (WHO) and the International Committee on Taxonomy of Viruses (ICTV).</p>
+
+<p>The geographic naming of viruses and diseases has had negative consequences. A SARS-CoV-2 variant Oliveira and his colleagues were the first to describe was dubbed the South African strain, which led to travel bans; WHO later dubbed it Beta. Locales fearing negative reactions if they have a pathogen named after them “might hold information when they discover a new virus,” he adds.</p>
+
+<p>Although WHO as long ago as 2015 recommended against geography-based names, many viruses in ICTV’s Master Species List still have them—Ebola, named after a river in the Democratic Republic of the Congo, is typically divided into Sudan and Zaire strains—and Oliveira says it’s time to rethink all of them. “Most of these were named by people doing parachute colonialist research, going to a place, ‘Oh, I find that, I will name the virus as I want,’” he says. “So that’s how people did it in the past. Is that the right way to do it? I don’t think so.”</p>
 </div>
 
 </html>
