css lesson 2 updates 2

--- a/CSSlesson2.html
+++ b/CSSlesson2.html
@@ -8,7 +8,9 @@
     <meta name= "keywords" content= "lesson, HTML, Binghamton University">
     <meta name= "description" content="This is a basic intro to HTML coding.">
     <link rel="stylesheet" type="text/css" href="css/css-lesson-02.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
   
  </head>
 
@@ -20,7 +22,7 @@
 
     <h1>Rename monkeypox strains to remove geographic stigma, researchers say</h1>
 
-    <p>BY JON COHEN 10 JUN 2022, 4:25PM </p> 
+    <p>By Jon Cohen | 10 Jun 2022, 4:25pm </p> 
 
     <img src="images/virus.jpg" />
 
