css lesson 2 final update

--- a/CSSlesson2.html
+++ b/CSSlesson2.html
@@ -20,11 +20,11 @@
 <div id="wrapper">
     <div class="article">
 
-    <h1>Rename monkeypox strains to remove geographic stigma, researchers say</h1>
+    <h1>RENAME MONKEYPOX TO REMOVE GEOGRAPHIC STIGMA, RESEARCHERS SAY</h1>
 
-    <p>By Jon Cohen | 10 Jun 2022, 4:25pm </p> 
+    <p class="byline">By Jon Cohen | 10 Jun 2022, 4:25pm </p> 
 
-    <img src="images/virus.jpg" />
+    <img src="images/globe.jpg" />
 
     <p>The name “hMPXV A.1” may not roll off the tongue, but a prominent, international group of researchers contends that something like it should emerge from an overhaul of the current naming system for monkeypox and its so-called West African and Congo Basin strains.</p>
 
