css lesson 2 update 4
fixed image problem

--- a/CSSlesson2.html
+++ b/CSSlesson2.html
@@ -24,7 +24,7 @@
 
     <p class="byline">By Jon Cohen | 10 Jun 2022, 4:25pm </p> 
 
-    <img src="images/globe.jpg" />
+    <img src="Images/globe.jpg" />
 
     <p>The name “hMPXV A.1” may not roll off the tongue, but a prominent, international group of researchers contends that something like it should emerge from an overhaul of the current naming system for monkeypox and its so-called West African and Congo Basin strains.</p>
 
