--- a/CSSlesson3.html
+++ b/CSSlesson3.html
@@ -18,6 +18,9 @@
 
 <div id="wrapper">
     <div class="article">
+
+      <h1>Box Model</h1>
+
       <div class="box">
          my first box 
       </div>
@@ -36,6 +39,17 @@
       <div class="box">
          my third box 
       </div>
+      <div class="box">
+         my first box 
+      </div>
+      <div class="box">
+         my second box 
+      </div>
+      <div class="box">
+         my third box 
+      </div>
+   </div>
+</div>
 
 <h1>Sizing Units</h1>
 
