--- a/CSSlesson3.html
+++ b/CSSlesson3.html
@@ -21,6 +21,10 @@
 
       <h1>Box Model</h1>
 
+<div class="masthead">
+    navigation here
+      </div>
+
       <div class="box">
          my first box 
       </div>
@@ -64,7 +68,7 @@
    <div class="half">
       first half
    </div>
-   <div class="second-half">
+   <div class="  half">
       second half
    </div>
 </div>
@@ -72,6 +76,9 @@
 <p>
    em units 
 </p>
+
+ <div class="em-size-box">
+   </div>
 
 <div class ="new-font-size">
    <div class="em-size-box">
@@ -91,8 +98,11 @@
    </div>
 
    <p>
-      vw and vh units
+      vw and vh units.
    </p>
+
+</div>
+</div>
 
    <div class ="vw-vh-demo">
       VH and VW demo
