final updates CSS lesson 3

--- a/CSSlesson3.html
+++ b/CSSlesson3.html
@@ -52,8 +52,7 @@
       <div class="box">
          my third box 
       </div>
-   </div>
-</div>
+   
 
 <h1>Sizing Units</h1>
 
@@ -107,3 +106,6 @@
    <div class ="vw-vh-demo">
       VH and VW demo
    </div>
+
+</body>
+</html>
