css wide and tall

--- a/CSSlesson4 assignment 2.html
+++ b/CSSlesson4 assignment 2.html
@@ -22,21 +22,25 @@
 
 <div id="wrapper">
 
-<div id="grid-complex">
-   <div class="block "></div> 
-   <div class="block"></div>
-   <div class="block"></div>
-   <div class="block"></div>
-   <div class="block"></div>
-   <div class="block"></div>
-
-
- 
-
-  
+   <div id="grid-complex">
+      <div class="block wide-tall"></div> 
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>
+      <div class="block"></div>  
    </div>
-</div>
 
+   <div id="grid-complex">
+      <div class="block-b wide"></div> 
+      <div class="block-b"></div>
+      <div class="block-b"></div>
+      <div class="block-b"></div>
+      <div class="block-b"></div>
+      <div class="block-b"></div>  
+   </div>
+
+</div>
 
 </body>
 </html>
