--- a/index copy.html
+++ b/index copy.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudfarw.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="css/grid.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style copy.css">
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
 </head>
 
@@ -464,7 +464,7 @@
             </div>
 <div id="nav-button" class="width-3-12-m width-12-12">
     <div id="nav-button-holder">
-        <button class="hamburgr hamburger--squeeze" type="button">
+        <button class="hamburger hamburger--squeeze" type="button">
             <span class="hamburger-box">
                 <span class="hamburger-inner"></span>
             </span>
