--- a/index copy.html
+++ b/index copy.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta name="keywords" content="design,html, css, frontend, developer, designer">
-    <meta name="description" content="Personal Website of Apurva Singh">
-    <title>Apurva Singh</title>
-    <script src="https://cdnjs.cloudfarw.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/grid.css">
-    <link rel="stylesheet" type="text/css" href="css/style copy.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
+    <head>
+        <meta name="keywords" content="design, html, css, frontend, developer, designer">
+        <meta name="description" content="Personal Website of Apurva Singh">
+        <title>Apurva Singh</title>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
+  <script src="js/main.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/grid.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Vollkorn:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
