Updates to home page

--- a/finalproject.html
+++ b/finalproject.html
@@ -49,6 +49,7 @@
 <div id="nav" class="width-12-12-m width-7-12">
     <ul>
         <li><a href="#">About </a></li>
+        <li><a href="#">Blog </a></li>
         <li><a href="#">Women's Fashion </a></li>
         <li><a href="#">Contact</a></li>
     </ul>
@@ -73,9 +74,7 @@
     </div>
 </div>
 </div>
-  <h3>Trending Looks
-
-  </h3>
+  <h3> <a title= "Trending Looks" href="Women'sfashion.html">Trending Looks</a></h3>
 
        
 
@@ -214,7 +213,7 @@
   <div class="column">
     <a href="#">
       <div class="container">
-        <img src="Images/fashion21.jpg"  class="image" height="2000">
+        <img src="Images/fashion21.jpg"  class="image" >
         <div class="overlay">
           <div class="text">Flowy Silks</div>
         </div>
@@ -222,6 +221,36 @@
     </a>
   </div>
 </div>
+
+<div id="writings" class="width-12-12-m width-12-12">
+
+        <h3><a title="Blog" href="Blog.html">Blog Posts</a></h3>
+
+        <div id="writings-holder" class="grid">
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">27 JUN, 2022</p></div>
+            <h2><a href="">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">18 MAY, 2022</p></div>
+            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">11 APR, 2022</p></div>
+            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
+            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.<p>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">4 APR, 2022</p></div>
+            <h2><a href="">Fusce Varius Risus</a></h2>
+            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.<p>
+          </div>
 
 
 
