Added subpages for different colors

--- a/finalproject.html
+++ b/finalproject.html
@@ -50,13 +50,16 @@
     <ul>
         <li><a href="#">About </a></li>
         <li><a href="#">Blog </a></li>
-        <li><a href="#">Women's Fashion </a></li>
+        <li><a href="Women'sFashion.html">Women's Fashion </a></li>
         <li><a href="#">Contact</a></li>
+
     </ul>
 </div>
 
-<hr>
+
 </div>
+
+
 
 
 
@@ -78,22 +81,6 @@
 <div id="home">
 
   <h3> <a title= "Trending Looks" href="Women'sFashion.html">Trending Looks</a></h3>
-
-       
-
-          <!--<div class="width-12-12-m width-6-12 work-item">
-            <a class="inner" href="portfolio-single.html" title="Every Single Person">
-              <div class="work-inside">
-                <h2>Every Single Person</h2>
-                <p>Every single reported COVID-19 case by country.</p>
-              </div>
-              <img title="Every Single Person" src="images/everysinglecase.png" />
-            </a>
-          </div>
-
-        <div>
-
-      </div> -->
 
 <div id="main-content" class="grid no-gutter">
 
@@ -240,7 +227,7 @@
 
 </div>
 
-<!--  <div class="container"><div class="typed-out">Style is a way to say who you are without having to speak</div></div> -->
+
 
  <div id="footer" class="grid">
       <div class="width-12-12-m width-12-12">
