--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <ul>
         <li><a href="#">About </a></li>
         <li><a href="#">Blog </a></li>
-        <li><a href="#">Women's Fashion </a></li>
+        <li><a href="#" >Women'ashion </a></li>
         <li><a href="#">Contact</a></li>
     </ul>
 </div>
