Finished updating clothing subpages

--- a/EbonyBlacks.html
+++ b/EbonyBlacks.html
@@ -85,10 +85,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B1.jpg" class="image"  >
+            <img src="Images/fashion14.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> halter dress </h1>
-                <body> The dress that can take you seamlessly from day to night</body>
+              <div class="text"> <h1> collared blouse </h1>
+                <body> effortlessly stunning</body>
     
           </div>
             </div>
@@ -97,10 +97,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B2.jpg" class="image" >
+            <img src="Images/Bl1.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> bejeweled gown </h1>
-              <body> An evening gown you can dance the night away in </body>
+            <div class="text"> <h1> black deep v dress </h1>
+              <body> a floral mini for summer nights </body>
           </div>
             </div>
         </a>
