--- a/FlowySilks.html
+++ b/FlowySilks.html
@@ -84,10 +84,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B1.jpg" class="image"  >
+            <img src="Images/FS1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> halter dress </h1>
-                <body> The dress that can take you seamlessly from day to night</body>
+              <div class="text"> <h1> cowl silk</h1>
+                <body> The dress that shows off your best features</body>
     
           </div>
             </div>
@@ -96,10 +96,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B2.jpg" class="image" >
+            <img src="Images/FS2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> bejeweled gown </h1>
-              <body> An evening gown you can dance the night away in </body>
+            <div class="text"> <h1> strappy gown </h1>
+              <body> a shiny red number... need I say more?  </body>
           </div>
             </div>
         </a>
