--- a/NeutralFlorals.html
+++ b/NeutralFlorals.html
@@ -85,10 +85,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B1.jpg" class="image"  >
+            <img src="Images/Fl1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> halter dress </h1>
-                <body> The dress that can take you seamlessly from day to night</body>
+              <div class="text"> <h1> bow top </h1>
+                <body> A sassy top for making a statement</body>
     
           </div>
             </div>
@@ -97,10 +97,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B2.jpg" class="image" >
+            <img src="Images/Flowers1.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> bejeweled gown </h1>
-              <body> An evening gown you can dance the night away in </body>
+            <div class="text"> <h1> maxi dress </h1>
+              <body> Dressing up never felt so liberating </body>
           </div>
             </div>
         </a>
