--- a/FreshHazels.html
+++ b/FreshHazels.html
@@ -84,11 +84,11 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B1.jpg" class="image"  >
+            <img src="Images/BR1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> halter dress </h1>
-                <body> The dress that can take you seamlessly from day to night</body>
-    
+              <div class="text"> <h1> double breasted coat</h1>
+                <body> $75 | keep cool in the fall & warm in the winter</body>
+     
           </div>
             </div>
         </a>
@@ -96,10 +96,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B2.jpg" class="image" >
+            <img src="Images/BR2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> bejeweled gown </h1>
-              <body> An evening gown you can dance the night away in </body>
+            <div class="text"> <h1> tie-up coat </h1>
+              <body> $129 | a coat that screams layers, layers, layers! </body>
           </div>
             </div>
         </a>
