--- a/SuaveGrays.html
+++ b/SuaveGrays.html
@@ -84,10 +84,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B1.jpg" class="image"  >
+            <img src="Images/G1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> halter dress </h1>
-                <body> The dress that can take you seamlessly from day to night</body>
+              <div class="text"> <h1> top w/ button-down skirt </h1>
+                <body> The duo that does it all</body>
     
           </div>
             </div>
@@ -96,10 +96,10 @@
 
     <div class="width-6-12 width-6-12">
         <a href="#" class="container">
-            <img src="Images/B2.jpg" class="image" >
+            <img src="Images/G2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> bejeweled gown </h1>
-              <body> An evening gown you can dance the night away in </body>
+            <div class="text"> <h1> Gray zip-up hoodie </h1>
+              <body> the sweatshirt that will make you want to exercise </body>
           </div>
             </div>
         </a>
