added blog single

--- a/Blog-Single.html
+++ b/Blog-Single.html
@@ -49,7 +49,7 @@
 <div id="nav" class="width-12-12-m width-9-12">
     <ul>
         <li><a href="#">About </a></li>
-        <li><a href="#">Blog </a></li>
+        <li><a class="active" href="Blog.html">Blog </a></li>
         <li><a href="Women'sFashion.html">Women's Fashion </a></li>
         <li><a href="#">Contact</a></li>
 
@@ -67,29 +67,25 @@
 
         <div id="writings-holder" class="grid">
 
-          <div class="width-12-12-m width-6-12 writing-item">
+          <div class="width-12-12-m width-9-12 writing-item">
             <div class="date-holder"><p class="date">27 JUN, 2022</p></div>
             <h2><a href="">Fusce Varius Risus</a></h2>
             <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.</p>
+
+            <p>
+                <img title="Fashion equity" src="Images/family.jpg" >
+                <span class="caption">BEST CAPTION EVER </span>
+
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis malesuada tortor non dignissim. Proin pellentesque lacus nibh, sed ultricies mauris consectetur sit amet. Suspendisse et ipsum at nibh aliquam aliquet eget id dolor. Praesent at nisi id ipsum porttitor consectetur. Donec scelerisque accumsan erat, vel ullamcorper nulla venenatis ac. Vivamus lacus massa, ullamcorper pulvinar pulvinar et, aliquet id ipsum. Nulla facilisi. Morbi dignissim ornare tempus. Etiam eleifend odio sapien, quis luctus odio lobortis ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus a condimentum tellus, hendrerit tristique velit. Phasellus nec gravida tortor. In a suscipit elit, ut molestie mi. Pellentesque a ipsum id purus consectetur facilisis. Phasellus non massa vel mi facilisis congue nec non ligula.</p>
+
+            <p> Sed fringilla posuere velit. Ut ornare nisi nec vehicula malesuada. Vestibulum risus sapien, cursus sed tellus eu, suscipit pretium elit. Nullam vestibulum, libero sed rhoncus mattis, dolor ipsum interdum velit, venenatis convallis leo est eget lectus. Morbi condimentum felis quis arcu maximus, at dignissim lectus posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat ipsum libero, et elementum ligula mattis eget. Nam mollis massa ac nibh posuere, ut viverra metus convallis. Etiam sit amet mauris hendrerit, venenatis lorem sit amet, pellentesque felis. Donec varius leo quam, a gravida odio interdum at. Nam tempus finibus eros, id bibendum neque dignissim vitae. </p>
+
+            <p> Fusce quis odio vitae enim dapibus dignissim. Aenean eget blandit sem. Suspendisse aliquam sem quis porttitor rutrum. Nulla eu mattis nibh, vel consequat risus. Cras sed eros tellus. Sed interdum non nunc non viverra. Proin tellus ipsum, tristique eget sem et, egestas imperdiet eros. Etiam ut dolor vel mi lobortis volutpat eget id quam. Curabitur sit amet elementum est. </p>
+
+            <p> Phasellus ultricies urna id facilisis condimentum. Aliquam sollicitudin dapibus arcu in varius. Maecenas mollis ultrices neque, sed vulputate neque rutrum vitae. Vivamus egestas purus turpis. Donec at nulla non neque condimentum tempus vel a est. Donec leo erat, fermentum a ex ut, sagittis semper dui. Vestibulum ac neque eu tortor tristique egestas. Praesent varius faucibus sodales. Praesent sit amet mattis elit. Duis a ipsum nibh. Sed molestie non libero quis luctus. Vivamus dictum lectus ut erat rhoncus, at rhoncus sapien facilisis. </p>
           </div>
 
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 MAY, 2022</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.</p>
-          </div>
 
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">11 APR, 2022</p></div>
-            <h2><a href="">Cras Hendrerit Eleifend</a></h2>
-            <p>Nam efficitur viverra justo, ut commodo justo elementum rhoncus. Donec eu laoreet diam. Praesent ornare mauris ut magna.</p>
-          </div>
-
-          <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">4 APR, 2022</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
-            <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius <a href="">risus ut efficitur</a> ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.</p>
-          </div>
 
         <div>
         </div>
@@ -100,13 +96,12 @@
 </div>
 
 
+
  <div id="footer" class="grid">
       <div class="width-12-12-m width-12-12">
         <p>Copyright ©2022 · Apurva Singh</p>
       </div>
- 
+    </div>
 
-
-</div>
 </body>
 </html>
