--- a/About.html
+++ b/About.html
@@ -48,10 +48,10 @@
 
 <div id="nav" class="width-12-12-m width-9-12">
     <ul>
-        <li><a href="About.html">About </a></li>
+        <li><a href="#">About </a></li>
         <li><a class="active" href="Blog.html">Blog </a></li>
         <li><a href="Women'sFashion.html">Women's Fashion </a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="#">Contact</a></li>
 
     </ul>
 </div>
@@ -63,18 +63,14 @@
 <div id="main" class="grid">
     <div id="writings" class="width-12-12-m width-12-12">
 
-        <h3><a title="Blog" href="Blog.html">Writings</a></h3>
 
         <div id="writings-holder" class="grid">
 
           <div class="width-12-12-m width-9-12 writing-item">
-            <div class="date-holder"><p class="date">27 JUN, 2022</p></div>
-            <h2><a href="">Fusce Varius Risus</a></h2>
+            <h2><a href="About.html">About me</a></h2>
             <p>Cras ac gravida neque. Nam euismod suscipit purus. Ut tortor mi, interdum eu vehicula at, congue non augue. Nulla facilisi. Fusce varius risus ut efficitur ornare. Sed non metus et ipsum scelerisque condimentum. Proin volutpat odio ipsum, sed luctus elit bibendum sed.</p>
 
-            <p>
-                <img title="Fashion equity" src="Images/family.jpg" >
-                <span class="caption">BEST CAPTION EVER </span>
+            <p><a href="files/resume.pdf" title="resume"> My amazing Resume (.pdf)</a></p>
 
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum venenatis malesuada tortor non dignissim. Proin pellentesque lacus nibh, sed ultricies mauris consectetur sit amet. Suspendisse et ipsum at nibh aliquam aliquet eget id dolor. Praesent at nisi id ipsum porttitor consectetur. Donec scelerisque accumsan erat, vel ullamcorper nulla venenatis ac. Vivamus lacus massa, ullamcorper pulvinar pulvinar et, aliquet id ipsum. Nulla facilisi. Morbi dignissim ornare tempus. Etiam eleifend odio sapien, quis luctus odio lobortis ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus a condimentum tellus, hendrerit tristique velit. Phasellus nec gravida tortor. In a suscipit elit, ut molestie mi. Pellentesque a ipsum id purus consectetur facilisis. Phasellus non massa vel mi facilisis congue nec non ligula.</p>
 
