fixing linking issues

--- a/finalproject.html
+++ b/finalproject.html
@@ -48,10 +48,10 @@
 
 <div id="nav" class="width-12-12-m width-9-12">
     <ul>
-        <li><a href="#">About </a></li>
+        <li><a href="About.html">About </a></li>
         <li><a href="Blog.html">Blog </a></li>
         <li><a href="Women'sFashion.html">Women's Fashion </a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="Contact.html">Contact</a></li>
 
     </ul>
 </div>
