--- a/finalproject.html
+++ b/finalproject.html
@@ -85,7 +85,7 @@
 <div id="main-content" class="grid no-gutter">
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="AerialBlues.html" class="container">
             <img src="Images/fashion1.jpg" class="image">
             <div class="overlay">
               <div class="text">Aerial Blues</div>
@@ -94,7 +94,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="EffortlessPinks.html" class="container">
             <img src="Images/fashion2.jpg" class="image">
             <div class="overlay">
               <div class="text">Effortless Pinks</div>
@@ -103,7 +103,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="DaringYellows.html" class="container">
             <img src="Images/fashion3.jpg" class="image">
             <div class="overlay">
               <div class="text">Daring Yellows</div>
@@ -112,7 +112,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="RetroPatterns.html" class="container">
             <img src="Images/fashion4.jpg" class="image">
             <div class="overlay">
               <div class="text">Retro Patterns</div>
@@ -121,7 +121,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="VibrantReds.html" class="container">
             <img src="Images/fashion5.jpg" class="image">
             <div class="overlay">
               <div class="text">Vibrant Reds</div>
@@ -130,25 +130,25 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="BohoChic.html" class="container">
             <img src="Images/fashion6.jpg"  class="image" height="2000">
             <div class="overlay">
-              <div class="text">Cottagecore Chic</div>
+              <div class="text">Boho Chic</div>
             </div>
         </a>
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="FreshHazels.html" class="container">
             <img src="Images/fashion7.jpg" class="image">
             <div class="overlay">
-              <div class="text">Contemporary Browns </div>
+              <div class="text">Fresh Hazels </div>
             </div>
         </a>
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="SuaveGrays.html" class="container">
             <img src="Images/fashion8.jpg" class="image">
             <div class="overlay">
               <div class="text">Suave Grays</div>
@@ -157,7 +157,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="EbonyBlacks.html" class="container">
             <img src="Images/fashion9.jpg"  class="image" height="2000">
             <div class="overlay">
               <div class="text">Ebony Blacks</div>
@@ -166,7 +166,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="PoshWhites.html" class="container">
             <img src="Images/fashion17.jpg" class="image">
             <div class="overlay">
               <div class="text">Posh Whites </div>
@@ -175,7 +175,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="NeutralFlorals.html" class="container">
             <img src="Images/fashion20.jpg" class="image">
             <div class="overlay">
               <div class="text">Neutral Florals</div>
@@ -184,7 +184,7 @@
     </div>
 
     <div class="width-4-12 width-4-12">
-        <a href="#" class="container">
+        <a href="FlowySilks.html" class="container">
             <img src="Images/fashion21.jpg"  class="image" >
             <div class="overlay">
               <div class="text">Flowy Silks</div>
