--- a/Women'sFashion.html
+++ b/Women'sFashion.html
@@ -79,9 +79,10 @@
 <hr>
 
 
-<div style="display:inline-block; vertical-align:top;" >
-     <img src="Images/womensfashion.png" /> 
-
+<div class="grid fashion">
+    <div class="width-12-12-m width-12-12">
+         <img src="Images/womensfashion.png" /> 
+    </div>
 </div>
 
 
