--- a/css-lessons/CSSlesson1.html
+++ b/css-lessons/CSSlesson1.html
@@ -7,7 +7,7 @@
     <title>CSS Lesson 01</title>
     <meta name= "keywords" content= "lesson, HTML, Binghamton University">
     <meta name= "description" content="This is a basic intro to HTML coding.">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/css-lesson-01.css">
 
     <style type="text/css">
  {color: orange;}
@@ -29,12 +29,12 @@
 
 <div>
  <p style="color: pink;">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed felis et elit tempus finibus a sed enim. Aliquam lacinia scelerisque turpis, non tincidunt nunc consectetur ac. Curabitur faucibus nibh mi, ac tempus nisi hendrerit in. Fusce hendrerit porttitor tellus dapibus commodo. Aliquam <a target="_bloank" title="Link to Google" href ="https://google.com">Google<a/> luctus in leo non laoreet. Proin a tellus maximus purus lobortis pellentesque. Suspendisse vitae mollis nisi. Aenean ac risus non dolor vulputate imperdiet at at tortor. Nunc a aliquam est.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed felis et elit tempus finibus a sed enim. Aliquam lacinia scelerisque turpis, non tincidunt nunc consectetur ac. Curabitur faucibus nibh mi, ac tempus nisi hendrerit in. Fusce hendrerit porttitor tellus dapibus commodo. Aliquam <a target="_blank" title="Link to Google" href ="https://google.com">Google<a/> luctus in leo non laoreet. Proin a tellus maximus purus lobortis pellentesque. Suspendisse vitae mollis nisi. Aenean ac risus non dolor vulputate imperdiet at at tortor. Nunc a aliquam est.
 </p>
 
 
 <p>
-    <a href="https://unsplash.com/s/photos/family" target="_blank"><img src="images/family.jpg" title="My fam" alt="Here's my family" width="500" /></a>
+    <a href="https://unsplash.com/s/photos/family" target="_blank"><img src="../images/family.jpg" title="My fam" alt="Here's my family" width="500" /></a>
 </p>
 <! -- This is a comment -->
 
