--- a/EbonyBlacks.html
+++ b/EbonyBlacks.html
@@ -83,23 +83,22 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/fashion14.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> collared blouse </h1>
+              <div class="ntext"> <h1> collared blouse </h1>
                 <body> effortlessly stunning</body>
-    
           </div>
             </div>
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Bl1.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> black deep v dress </h1>
+            <div class="ntext"> <h1> black deep v dress </h1>
               <body> a floral mini for summer nights </body>
           </div>
             </div>
