Updates to subpage text

--- a/AerialBlues.html
+++ b/AerialBlues.html
@@ -83,24 +83,24 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/B1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> halter dress </h1>
-                <body> The dress that can take you seamlessly from day to night</body>
+              <div class="ntext"> <h1> halter dress </h1>
+                <body> $59 | The dress that can take you seamlessly from day to night</body>
     
           </div>
             </div>
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/B2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> bejeweled gown </h1>
-              <body> An evening gown you can dance the night away in </body>
+            <div class="ntext"> <h1> bejeweled gown </h1>
+              <body> $99 | An evening gown you can dance the night away in </body>
           </div>
             </div>
         </a>
