--- a/BohoChic.html
+++ b/BohoChic.html
@@ -83,11 +83,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/BC1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> linen dress </h1>
+              <div class="ntext"> <h1> linen dress </h1>
                 <body> $59 | Walk the runway or the street</body>
     
           </div>
@@ -95,11 +95,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/BC2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> tie-front top </h1>
+            <div class="ntext"> <h1> tie-front top </h1>
               <body> $39 | Pair with denim shorts for easy festival wear </body>
           </div>
             </div>
