--- a/DaringYellows.html
+++ b/DaringYellows.html
@@ -83,11 +83,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Y1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> sleeved tee & patterned skirt  </h1>
+              <div class="ntext"> <h1> sleeved tee & patterned skirt  </h1>
                 <body> $79 | Take the city streets by storm</body>
     
           </div>
@@ -95,11 +95,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Y2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> pom-pom off-the-shoulder top </h1>
+            <div class="ntext"> <h1> pom-pom off-the-shoulder top </h1>
               <body> $25 | Festive summerwear for any occasion</body>
           </div>
             </div>
