--- a/FlowySilks.html
+++ b/FlowySilks.html
@@ -82,11 +82,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/FS1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> cowl silk</h1>
+              <div class="ntext"> <h1> cowl silk</h1>
                 <body> The dress that shows off your best features</body>
     
           </div>
@@ -94,11 +94,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/FS2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> strappy gown </h1>
+            <div class="ntext"> <h1> strappy gown </h1>
               <body> a shiny red number... need I say more?  </body>
           </div>
             </div>
