--- a/FreshHazels.html
+++ b/FreshHazels.html
@@ -82,11 +82,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/BR1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> double breasted coat</h1>
+              <div class="ntext"> <h1> double breasted coat</h1>
                 <body> $75 | keep cool in the fall & warm in the winter</body>
      
           </div>
@@ -94,11 +94,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/BR2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> tie-up coat </h1>
+            <div class="ntext"> <h1> tie-up coat </h1>
               <body> $129 | a coat that screams layers, layers, layers! </body>
           </div>
             </div>
