--- a/PoshWhites.html
+++ b/PoshWhites.html
@@ -83,11 +83,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/W1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> timeless tulle </h1>
+              <div class="ntext"> <h1> timeless tulle </h1>
                 <body> $60 | a skirt you might just start dancing anywhere in  </body>
     
           </div>
@@ -95,11 +95,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/W2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> lace blouse </h1>
+            <div class="ntext"> <h1> lace blouse </h1>
               <body> $54 | the blouse you can't stop talking about </body>
           </div>
             </div>
