--- a/RetroPatterns.html
+++ b/RetroPatterns.html
@@ -82,11 +82,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Rh1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> plaid jacket </h1>
+              <div class="ntext"> <h1> plaid jacket </h1>
                 <body> $59 | Autumn breeze doesn't stand a chance </body>
     
           </div>
@@ -94,11 +94,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Rh2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> funky jeggings </h1>
+            <div class="ntext"> <h1> funky jeggings </h1>
               <body> $29 | Comfort and style? Where has this been all my life? </body>
           </div>
             </div>
