--- a/SuaveGrays.html
+++ b/SuaveGrays.html
@@ -82,24 +82,24 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/G1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> top w/ button-down skirt </h1>
-                <body> The duo that does it all</body>
+              <div class="ntext"> <h1> top w/ button-down skirt </h1>
+                <body> $45 | The duo that does it all</body>
     
           </div>
             </div>
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/G2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> Gray zip-up hoodie </h1>
-              <body> the sweatshirt that will make you want to exercise </body>
+            <div class="ntext"> <h1> Gray zip-up hoodie </h1>
+              <body> $35 | The sweatshirt that will make you want to exercise </body>
           </div>
             </div>
         </a>
