--- a/VibrantReds.html
+++ b/VibrantReds.html
@@ -82,11 +82,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/R1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> cropped blouse </h1>
+              <div class="ntext"> <h1> cropped blouse </h1>
                 <body> $49 | Pair this with basically... anything!?!</body>
     
           </div>
@@ -94,11 +94,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/R2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> fearless pantsuit </h1>
+            <div class="ntext"> <h1> fearless pantsuit </h1>
               <body> $99 | Unexpected office-wear for days you need to turn up the dial </body>
           </div>
             </div>
