--- a/EffortlessPinks.html
+++ b/EffortlessPinks.html
@@ -83,11 +83,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/P1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> fuschia dreams </h1>
+              <div class="ntext"> <h1> fuschia dreams </h1>
                 <body> $49 | Bold hues for bold women</body>
     
           </div>
@@ -95,11 +95,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/P2.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> one-shoulder gown </h1>
+            <div class="ntext"> <h1> one-shoulder gown </h1>
               <body> $69 | Pretty in pink</body>
           </div>
             </div>
