--- a/NeutralFlorals.html
+++ b/NeutralFlorals.html
@@ -83,11 +83,11 @@
 <div id="main-content" class="grid no-gutter">
 
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Fl1.jpg" class="image"  >
             <div class="noverlay">
-              <div class="text"> <h1> bow top </h1>
+              <div class="ntext"> <h1> bow top </h1>
                 <body> A sassy top for making a statement</body>
     
           </div>
@@ -95,11 +95,11 @@
         </a>
     </div>
 
-    <div class="width-6-12 width-6-12">
+    <div class="width-12-12-m width-6-12">
         <a href="#" class="container">
             <img src="Images/Flowers1.jpg" class="image" >
             <div class="noverlay"> 
-            <div class="text"> <h1> maxi dress </h1>
+            <div class="ntext"> <h1> maxi dress </h1>
               <body> Dressing up never felt so liberating </body>
           </div>
             </div>
